<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.thayna.telas.TelaActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bem_vindo_sistema_de_estudos"
        android:id="@+id/BV" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/senha"
        android:text="@string/senha"
        android:layout_below="@+id/BV"
        android:layout_alignEnd="@+id/BV"
        android:layout_marginTop="123dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email_usuario"
        android:layout_alignBottom="@+id/senha"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="47dp"
        android:text="@string/email" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acessar"
        android:id="@+id/acessar"
        android:layout_below="@+id/senha"
        android:layout_alignParentStart="true"
        android:layout_marginTop="82dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/limpar"
        android:id="@+id/limpar"
        android:layout_alignTop="@+id/acessar"
        android:layout_toEndOf="@+id/senha" />
</RelativeLayout>
