<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.thayna.telas.Tela3Activity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/nome"
        android:ems="10"
        android:id="@+id/id_nome"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="43dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/matr_numero"
        android:layout_below="@+id/id_nome"
        android:layout_alignParentStart="true"
        android:text="@string/matricula" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/id_email2"
        android:layout_below="@+id/matr_numero"
        android:layout_alignParentStart="true"
        android:text="@string/Email2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/id_conta"
        android:layout_below="@+id/id_email2"
        android:layout_alignEnd="@+id/id_email2"
        android:layout_alignParentStart="true"
        android:text="@string/conta_github" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/id_curso"
        android:layout_below="@+id/id_conta"
        android:layout_centerHorizontal="true"
        android:spinnerMode="dropdown" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ok"
        android:id="@+id/id_ok"
        android:layout_below="@+id/id_curso"
        android:layout_alignParentStart="true"
        android:layout_marginStart="53dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Limpar 2"
        android:id="@+id/id_limpar2"
        android:layout_below="@+id/id_curso"
        android:layout_toEndOf="@+id/id_conta" />
</RelativeLayout>
